# auto-pokedex-counter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: build.py
src/my_app/: __main__.py  app.py  main_window.py
src/pokedex_counter/: __main__.py  app.py  calibration_runner.py  camera.py  config.py  main_window.py  roi_config.py  roi_writer.py  settings_window.py
src/pokedex_counter/controllers/: game_controller.py
src/pokedex_counter/resources/comparison/: WR.json
src/pokedex_counter/services/: calibration_service.py  capture_service.py  detection_service.py  pb_service.py  template_service.py  wr_service.py
src/pokedex_counter/ui/widgets/: clickable_label.py  flow_layout.py  sprite_strip.py
src/pokedex_counter/vision/: template_matching.py
tests/: conftest.py  test_calibration_runner.py  test_camera.py  test_main_window.py  test_roi_config.py  test_roi_writer.py
tests/services/: conftest.py  test_calibration_service.py  test_detection_service.py
tests/ui/widgets/: test_clickable_label.py  test_flow_layout.py  test_sprite_strip.py
tests/vision/: test_template_matching.py
