[project]
name = "my-desktop-app"
version = "0.1.0"
description = "A PySide6 desktop application"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pyinstaller>=6.0",
]

[project.scripts]
my-desktop-app = "pokedex_counter.app:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
qt_api = "pyside6"
testpaths = ["tests"]
