[project]
name = "pokedex_counter"
version = "0.3.1"
description = "A Pokedex Counter for RB 151"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pygrabber>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pyinstaller>=6.0",
]

[project.scripts]
pokedex_counter = "pokedex_counter.app:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
qt_api = "pyside6"
testpaths = ["tests"]
